# SFMX

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  rebuild.bat  rebuild.sh  start.bat  start.sh  test.bat  test.sh
FrameworkGame/: CMakeLists.txt
FrameworkGame/include/: test.h
FrameworkGame/include/assets/: Asset.h  AssetCodecRegistry.h  AssetCooker.h  AssetFile.h  AssetImporterRegistry.h  AssetManager.h  AssetMetadata.h  IAssetCodec.h  IDecoder.h  IImageDecoder.h  LuaAsset.h  LuaCodec.h  SoundAsset.h  SoundCodec.h  TextureAsset.h  TextureCodec.h
FrameworkGame/include/config/: IniFile.h
FrameworkGame/include/core/: DataStream.h  DataStreamTypes.h  FileDataStream.h  FileSystem.h  MemoryDataStream.h  MemoryPool.h
FrameworkGame/include/core/physics/: Collider.h  PhysicsSystem.h
FrameworkGame/include/core/platform/: PlatformDefines.h  PlatformTypes.h  Prerequisites.h  STDHeaders.h  Using.h
FrameworkGame/include/input/: ActionMap.h  Gamepad.h  InputAction.h  InputControl.h  InputSystem.h  InputTypes.h  InputValue.h  Interaction.h  Keyboard.h  Mapping.h  Mouse.h  Processor.h
FrameworkGame/include/resource/: Frame.h  SpriteAtlas.h
FrameworkGame/include/scene/: Animation.h  AnimatorComponent.h  AudioComponent.h  CameraComponent.h  CanvasComponent.h  ColliderComponent.h  Component.h  ComponentRegistry.h  ListenerComponent.h  ParticleSystemComponent.h  RigidBodyComponent.h  Scene.h  SceneManager.h  SceneNode.h  SceneSerializer.h  SceneTypes.h  ScriptComponent.h  SourceComponent.h  SpriteComponent.h  Transform.h  UICanvasComponent.h
FrameworkGame/include/scripts/: RegisterAll.h  RegisterAnimatorComponent.h  RegisterAssetManager.h  RegisterCameraComponent.h  RegisterComponent.h  RegisterComponentAccess.h  RegisterIAsset.h  RegisterInputTypes.h  RegisterIntRect.h  RegisterListenerComponent.h  RegisterMouse.h  RegisterParticleSystemComponent.h  RegisterSceneManager.h  RegisterScriptComponent.h  RegisterSourceComponent.h  RegisterSpriteComponent.h  RegisterTransformComponent.h  RegisterUUID.h  RegisterVector2i.h  RegisterVector3i.h  ScriptEngine.h  registerAll.h  registerAngle.h  registerColor.h  registerComponent.h  registerFloatRect.h  registerGamepad.h  registerInputTypes.h  registerIntRect.h  registerKeyboard.h  registerMouse.h  registerScene.h  registerSceneNode.h  registerTransform.h  registerVector2f.h  registerVector2i.h  registerVector3f.h  registerVector3i.h  scriptEngine.h
FrameworkGame/include/ui/: Canvas.h  UIButton.h  UICanvasComponent.h  UICheckbox.h  UIEventSystem.h  UIHBox.h  UIImage.h  UILabel.h  UIPanel.h  UIScrollView.h  UISlider.h  UITextBox.h  UITheme.h  UIVBox.h  UIWidget.h
FrameworkGame/include/utils/: Arithmetic.h  EventSystem.h  Flags.h  MemoryPoolHandler.h  Module.h  Random.h  TypeTraits.h  UUID.h  UnitTest.h
FrameworkGame/source/: test.cpp
FrameworkGame/source/assets/: AssetCodecRegistry.cpp  AssetCooker.cpp  AssetFile.cpp  AssetImporterRegistry.cpp  AssetManager.cpp  LuaAsset.cpp  LuaCodec.cpp  SoundAsset.cpp  SoundCodec.cpp  TextureAsset.cpp  TextureCodec.cpp
FrameworkGame/source/config/: IniFile.cpp
FrameworkGame/source/core/: DataStream.cpp  FileDataStream.cpp  FileSystem.cpp  MemoryDataStream.cpp  MemoryPool.cpp
FrameworkGame/source/input/: ActionMap.cpp  Gamepad.cpp  InputAction.cpp  InputControl.cpp  InputSystem.cpp  InputTypes.cpp  Interaction.cpp  Keyboard.cpp  Mapping.cpp  Mouse.cpp  Processor.cpp
FrameworkGame/source/resource/: SpriteAtlas.cpp
FrameworkGame/source/scene/: AnimatorComponent.cpp  CameraComponent.cpp  CanvasComponent.cpp  ColliderComponent.cpp  Component.cpp  ComponentRegistry.cpp  ListenerComponent.cpp  ParticleSystemComponent.cpp  RigidBodyComponent.cpp  Scene.cpp  SceneManager.cpp  SceneNode.cpp  SceneSerializer.cpp  ScriptComponent.cpp  SourceComponent.cpp  SpriteComponent.cpp  Transform.cpp  UICanvasComponent.cpp
FrameworkGame/source/scripts/: RegisterAll.cpp  RegisterAngle.cpp  RegisterAnimatorComponent.cpp  RegisterAssetManager.cpp  RegisterCameraComponent.cpp  RegisterColor.cpp  RegisterComponent.cpp  RegisterComponentAccess.cpp  RegisterFloatRect.cpp  RegisterGamepad.cpp  RegisterIAsset.cpp  RegisterInputTypes.cpp  RegisterIntRect.cpp  RegisterKeyboard.cpp  RegisterListenerComponent.cpp  RegisterMouse.cpp  RegisterParticleSystemComponent.cpp  RegisterScene.cpp  RegisterSceneManager.cpp  RegisterSceneNode.cpp  RegisterScriptComponent.cpp  RegisterSourceComponent.cpp  RegisterSpriteComponent.cpp  RegisterTransform.cpp  RegisterTransformComponent.cpp  RegisterUUID.cpp  RegisterVector2f.cpp  RegisterVector2i.cpp  RegisterVector3f.cpp  RegisterVector3i.cpp  ScriptEngine.cpp  registerAll.cpp  registerAngle.cpp  registerColor.cpp  registerComponent.cpp  registerComponentAccess.cpp  registerFloatRect.cpp  registerGamepad.cpp  registerInputTypes.cpp  registerIntRect.cpp  (+11 more)
FrameworkGame/source/ui/: Canvas.cpp  UIButton.cpp  UICanvasComponent.cpp  UICheckbox.cpp  UIEventSystem.cpp  UIHBox.cpp  UIImage.cpp  UILabel.cpp  UIPanel.cpp  UISlider.cpp  UITextBox.cpp  UIVBox.cpp  UIWidget.cpp
FrameworkGame/source/utils/: MemoryPoolHandler.cpp  Random.cpp  UUID.cpp
Game/: CMakeLists.txt  DemoCook.cpp  DemoCook.h  DemoScene.cpp  DemoScene.h  main.cpp  main_lua.cpp
Game/config/: Engine.ini  Game.ini
Game/resources/: bullet.lua  character.lua  node_script.lua
SketchGfx/: CMakeLists.txt
Tests/: AnimatorComponentSerializationTest.cpp  AssetCodecTest.cpp  AssetCookerTest.cpp  AssetFileTest.cpp  AssetManagerTest.cpp  BenchmarkTest.cpp  CMakeLists.txt  CollisionTest.cpp  ComponentRegistryTest.cpp  ComponentSerializationTest.cpp  DataStreamTest.cpp  DataStreamTest.h  FileSystemTest.cpp  FileSystemTest.h  FlagTest.cpp  FlagTest.h  ImageDecoderSeamTest.cpp  LuaAssetTest.cpp  ParticleSystemComponentSerializationTest.cpp  ParticleSystemTest.cpp  SceneSerializerTest.cpp  ScriptComponentSerializationTest.cpp  SourceComponentSerializationTest.cpp  SpriteAtlasTest.cpp  SpriteAtlasTest.h  SpriteComponentSerializationTest.cpp  TestRunner.h  UIButtonSerializationTest.cpp  UnitTest.cpp
(+2 files in other folders)
